Improved setup project

--- a/SetupConAuction/Product.wxs
+++ b/SetupConAuction/Product.wxs
@@ -8,15 +8,16 @@
 		</Condition>
 		
 		<MajorUpgrade DowngradeErrorMessage="A newer version of [ProductName] is already installed." />
-		<MediaTemplate />
+		<MediaTemplate EmbedCab="yes" />
 
 		<Feature Id="ProductFeature" Title="ConAuction" Level="1">
 			<ComponentGroupRef Id="ProductComponents" />
 		</Feature>
 	</Product>
 
-	<Fragment>
+	<Fragment>		
 		<Directory Id="TARGETDIR" Name="SourceDir">
+			<Directory Id="DesktopFolder" Name="Desktop"/>
 			<Directory Id="ProgramFilesFolder">
 				<Directory Id="INSTALLFOLDER" Name="ConAuction" />
 			</Directory>
@@ -25,20 +26,23 @@
 
 	<Fragment>
 		<ComponentGroup Id="ProductComponents" Directory="INSTALLFOLDER">
-			<Component Id="ProductComponent">
-				<File Id='ConAuctionExe' Name='ConAuction.exe' DiskId='1' Source='..\ConAuction\bin\Release\ConAuction.exe' KeyPath='yes'/>
-			</Component>
-			<Component Id="ProductComponent2">
-				<File Id='ConAuctionConfig' Name='ConAuction.exe.config' DiskId='1' Source='..\ConAuction\bin\Release\ConAuction.exe.config' KeyPath='yes'/>
-			</Component>
-			<Component Id="ProductComponent3">
-				<File Id='ConAuctionVsExe' Name='ConAuction.vshost.exe' DiskId='1' Source='..\ConAuction\bin\Release\ConAuction.vshost.exe' KeyPath='yes'/>
-			</Component>
-			<Component Id="ProductComponent4">
-				<File Id='ConAuctionVsConfig' Name='ConAuction.vshost.exe.config' DiskId='1' Source='..\ConAuction\bin\Release\ConAuction.vshost.exe.config' KeyPath='yes'/>
-			</Component>
-			<Component Id="ProductComponent5">
-				<File Id='ConAuctionVsManifest' Name='ConAuction.vshost.exe.manisfest' DiskId='1' Source='..\ConAuction\bin\Release\ConAuction.vshost.exe.manifest' KeyPath='yes'/>
+			<Component Id="ProductComponent" Guid="CC4E0D71-735A-4D75-8B98-8741EC603ED7">
+				<File Id='ConAuctionExe' Name='ConAuction.exe' Source='..\ConAuction\bin\Release\ConAuction.exe' KeyPath='yes'>
+					<Shortcut Advertise="yes"
+                          Id="ConAuctionDesktopShortcut"
+                          Directory="DesktopFolder"
+                          Name="ConAuction 2.1"
+                          WorkingDirectory="INSTALLLOCATION"
+                          Description="LinCon auction software"
+                          Icon="Icon.exe">
+						<Icon Id="Icon.exe" SourceFile="..\ConAuction\bin\Release\ConAuction.exe" />
+					</Shortcut>
+				</File>
+				<File Id='ConAuctionConfig' Name='ConAuction.exe.config' Source='..\ConAuction\bin\Release\ConAuction.exe.config'/>
+				<File Id='ConAuctionVsExe' Name='ConAuction.vshost.exe' Source='..\ConAuction\bin\Release\ConAuction.vshost.exe'/>
+				<File Id='ConAuctionVsConfig' Name='ConAuction.vshost.exe.config' Source='..\ConAuction\bin\Release\ConAuction.vshost.exe.config'/>
+				<File Id='ConAuctionVsManifest' Name='ConAuction.vshost.exe.manisfest' Source='..\ConAuction\bin\Release\ConAuction.vshost.exe.manifest'/>
+				<File Id='MySqlLib' Name='MySql.Data.dll' Source='..\Libs\MySql.Data.dll'/>
 			</Component>
 		</ComponentGroup>
 	</Fragment>
