--- a/ConAuction3/MainWindow.xaml
+++ b/ConAuction3/MainWindow.xaml
@@ -6,11 +6,8 @@
 	<Window.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary 
-
-                  Source="Resources/ResourceDictionary.xaml">
-				</ResourceDictionary>
-				
+				<ResourceDictionary Source="/PresentationFramework.Luna;component/themes/Luna.Metallic.xaml"/>
+				<ResourceDictionary Source="Resources/ResourceDictionary.xaml" />
 			</ResourceDictionary.MergedDictionaries>
 		</ResourceDictionary>
 	</Window.Resources>
