--- a/ConAuction3/Views/CustomerDlg.xaml
+++ b/ConAuction3/Views/CustomerDlg.xaml
@@ -10,15 +10,19 @@
 			<RowDefinition Height="30" />
 			<RowDefinition Height="30" />
 			<RowDefinition Height="30" />
+			<RowDefinition Height="30" />
+			<RowDefinition Height="30" />
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
-		<Label Grid.Row="0" Content="Namn" />
-		<TextBox Grid.Row="1" Name="CustomerName"  MinWidth="250" />
-		<Label Grid.Row="2" Content="Mobilnummer" />
-		<TextBox Grid.Row="3" Name="Phone" MinWidth="250" />
-		<Label Grid.Row="4" Content="Kommentar" />
-		<TextBox Grid.Row="5" Name="Note" MinWidth="250" />
-		<WrapPanel Grid.Row="6" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
+		<Label Grid.Row="0" Content="Id" />
+		<TextBox Grid.Row="1" Name="Id" IsReadOnly="true" MinWidth="250" />
+		<Label Grid.Row="2" Content="Namn" />
+		<TextBox Grid.Row="3" Name="CustomerName"  MinWidth="250" />
+		<Label Grid.Row="4" Content="Mobilnummer" />
+		<TextBox Grid.Row="5" Name="Phone" MinWidth="250" />
+		<Label Grid.Row="6" Content="Kommentar" />
+		<TextBox Grid.Row="7" Name="Note" MinWidth="250" />
+		<WrapPanel Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
 			<Button IsDefault="True" Name="btnDialogOk" Click="OnClick" MinWidth="60" Margin="0,0,10,0">_Ok</Button>
 			<Button IsCancel="True" MinWidth="60">_Cancel</Button>
 		</WrapPanel>
