--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -15,7 +15,8 @@
 		<DockPanel DockPanel.Dock="Top" Background="#FBD800">
 			<Image DockPanel.Dock="Left" Source="{StaticResource LinconLogoSmall}" MaxHeight="80"  Margin="30,0,30,0" />
 			<Label DockPanel.Dock="Left" FontSize="28" FontWeight="Bold" Padding="30" >ConAuction V3.0</Label>
-			<ComboBox DockPanel.Dock="Right" Text="Välj mode" MaxHeight="26" MaxWidth="120" ItemsSource="{Binding OpEnumList}"  IsEditable="False" SelectedValue="{Binding CurrentMode}" 
+			<ComboBox DockPanel.Dock="Right" Text="Välj mode" MaxHeight="40" MaxWidth="150" ItemsSource="{Binding OpEnumList}"  IsEditable="False"
+					  FontSize="20" FontWeight="Bold" SelectedValue="{Binding CurrentMode}" Margin="5" Padding="4"
 					  DisplayMemberPath="ValueString" SelectedValuePath="ValueMode" SelectedIndex="0">
 				
 			</ComboBox>
@@ -54,7 +55,7 @@
 				<Button DockPanel.Dock="Right" Content="Exit" Command="{Binding CancelCommand}"  TabIndex="20" Margin="10,5,10,5" />
 			</DockPanel>
 
-			<Grid>
+			<Grid Margin="10">
 				<Grid.InputBindings>
 					<MouseBinding Gesture="LeftDoubleClick" Command="{Binding ShowCustomerCommand}"/>
 					<!--<MouseBinding MouseAction="LeftDoubleClick" Command="{Binding ShowCustomerCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>-->
