--- a/ConAuction3/Views/ProductDlg.xaml
+++ b/ConAuction3/Views/ProductDlg.xaml
@@ -1,42 +1,59 @@
 ﻿<Window x:Class="ConAuction3.Views.ProductDlg"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Product" Height="Auto" Width="300">
-	<Grid Margin="15">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="30" />
-			<RowDefinition Height="Auto" />
-		</Grid.RowDefinitions>
-		<Label Grid.Row="0" Content="Id" />
-		<TextBox Grid.Row="1" Name="Label" IsReadOnly="true" MinWidth="250" />
-		<Label Grid.Row="2" Content="Typ" />
-		<TextBox Grid.Row="3" Name="Type"  MinWidth="250" />
-		<Label Grid.Row="4" Content="Namn" />
-		<TextBox Grid.Row="5" Name="ProductName" MinWidth="250" />
-		<Label Grid.Row="6" Content="Ägare" />
-		<TextBox Grid.Row="7" Name="Customer"  IsReadOnly="true" MinWidth="250" />
-		<Label Grid.Row="8" Content="Loppispris" />
-		<TextBox Grid.Row="9" Name="FixedPrice"  />
-		<Label Grid.Row="10" Content="Notering" />
-		<TextBox Grid.Row="11" Name="Note" MinWidth="250" />
-		<Label Grid.Row="12" Content="Beskrivning" />
-		<TextBox Grid.Row="13" Name="Description" MinWidth="250" />
-		<WrapPanel Grid.Row="14" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="0,15,0,0">
-			<Button IsDefault="True" Name="btnDialogOk" Click="OnClick" MinWidth="60" Margin="0,0,10,0">_Ok</Button>
-			<Button IsCancel="True" MinWidth="60">_Cancel</Button>
-		</WrapPanel>
-	</Grid>
+        Title="Product" Height="350"  Width="800"
+        WindowStartupLocation="CenterScreen">
+
+    <DockPanel>
+        <WrapPanel DockPanel.Dock="Bottom" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10,15,15,10">
+            <Button IsDefault="True" Name="btnDialogOk" Click="OnClick" MinWidth="60" Margin="10,0,10,0">_Ok</Button>
+            <Button IsCancel="True" MinWidth="60">_Cancel</Button>
+        </WrapPanel>
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="60" />
+                <RowDefinition Height="60" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="50" />
+            </Grid.RowDefinitions>
+
+            <DockPanel Grid.Row="0"  HorizontalAlignment="Stretch" >
+                <StackPanel Margin="10,5,10,5">
+                    <Label Content="Id" />
+                    <TextBox  Name="Label" IsReadOnly="true" MinWidth="75" />
+                </StackPanel>
+                <StackPanel Margin="10,5,10,5">
+                    <Label Content="Typ" />
+                    <TextBox  Name="Type"  MinWidth="100" />
+                </StackPanel>
+                <StackPanel Margin="10,5,10,5">
+                    <Label Content="Ägare" />
+                    <TextBox Name="Customer" IsReadOnly="true" />
+                </StackPanel>
+            </DockPanel>
+
+            <DockPanel Grid.Row="1"  HorizontalAlignment="Stretch" >
+                <StackPanel Margin="10,5,10,5">
+                    <Label Content="Namn" />
+                    <TextBox  Name="ProductName" MinWidth="400" />
+                </StackPanel>
+                <StackPanel Margin="10,5,10,5">
+                    <Label Content="Loppispris" />
+                    <TextBox  Name="FixedPrice" PreviewTextInput="FixedPrice_OnPreviewTextInput" MinWidth="100" />
+                </StackPanel>
+                <StackPanel Margin="10,5,10,5">
+                    <Label Content="Notering" />
+                    <TextBox Name="Note" />
+                </StackPanel>
+            </DockPanel>
+
+            <StackPanel Grid.Row="2"  HorizontalAlignment="Stretch"  Margin="10,5,10,5">
+                <Label  Content="Beskrivning" />
+                <TextBox  Name="Description" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" MinHeight="80" />
+            </StackPanel>
+
+
+        </Grid>
+    </DockPanel>
 </Window>
