--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -1,118 +1,103 @@
-﻿<Window x:Class="ConAuction3.MainWindow"
+﻿<Window x:Class="ConAuction3.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ConAuction" Height="900" Width="1400">
 
-	<Window.Resources>
-		<ResourceDictionary>
-			<ResourceDictionary.MergedDictionaries>
-				<ResourceDictionary Source="/PresentationFramework.Luna;component/themes/Luna.Metallic.xaml"/>
-				<ResourceDictionary Source="../Resources/ResourceDictionary.xaml" />
-			</ResourceDictionary.MergedDictionaries>
-		</ResourceDictionary>
-	</Window.Resources>
-	<DockPanel>
-		<DockPanel DockPanel.Dock="Top" Background="#FBD800">
-			<Image DockPanel.Dock="Left" Source="{StaticResource LinconLogoSmall}" MaxHeight="80"  Margin="30,0,30,0" />
-			<Label DockPanel.Dock="Left" FontSize="28" FontWeight="Bold" Padding="30" >ConAuction V3.0</Label>
-			<ComboBox DockPanel.Dock="Right" Text="Välj mode" MaxHeight="40" MaxWidth="150" ItemsSource="{Binding OpEnumList}"  IsEditable="False"
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/PresentationFramework.Luna;component/themes/Luna.Metallic.xaml"/>
+                <ResourceDictionary Source="../Resources/ResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+    <DockPanel>
+        <DockPanel DockPanel.Dock="Top" Background="#FBD800">
+            <Image DockPanel.Dock="Left" Source="{StaticResource LinconLogoSmall}" MaxHeight="80"  Margin="30,0,30,0" />
+            <Label DockPanel.Dock="Left" FontSize="28" FontWeight="Bold" Padding="30" >ConAuction V3.0</Label>
+            <ComboBox DockPanel.Dock="Right" Text="Välj mode" MaxHeight="40" MaxWidth="150" ItemsSource="{Binding OpEnumList}"  IsEditable="False"
 					  FontSize="20" FontWeight="Bold" SelectedValue="{Binding CurrentMode}" Margin="5" Padding="4"
 					  DisplayMemberPath="ValueString" SelectedValuePath="ValueMode" SelectedIndex="0">
-				
-			</ComboBox>
 
-		</DockPanel>
-		<DockPanel>
-			<DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" LastChildFill="True">
-				<StackPanel DockPanel.Dock="Right">
-					<Label Content="Namn" />
-					<TextBox Text="{Binding Signature,UpdateSourceTrigger=PropertyChanged}" MinWidth="100"  TabIndex="3"/>
-				</StackPanel>
-				<StackPanel DockPanel.Dock="Right">
-					<Label Content="Kalle" />
-					<TextBox Text="{Binding PatientId,UpdateSourceTrigger=PropertyChanged}" MinWidth="100"  TabIndex="1"/>
-				</StackPanel>
-				<StackPanel DockPanel.Dock="Right">
-					<Label Content="Namn" />
-					<TextBox Name="NameField" Text="{Binding Name,UpdateSourceTrigger=PropertyChanged}" MinWidth="100" TabIndex="0"/>
-				</StackPanel>
-			</DockPanel>
-			<DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" LastChildFill="False">
-				<Button DockPanel.Dock="Right" Content="ShowAll" Command="{Binding ShowAllCommand}"  TabIndex="9" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Right" Content="ShowOnlySelected" Command="{Binding ShowAllSelectedCommand}"  TabIndex="7" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Left"  Content="SelectAllShown" Command="{Binding SelectAllShownCommand}"  TabIndex="6" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Left"  Content="UnselectAllShown" Command="{Binding UnselectAllShownCommand}"  TabIndex="5" Margin="10,5,10,5" />
-			</DockPanel>
-			<DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False"  Background="#FBD800">
-				<Label Content="Binding StatusMsgTotal"/>
-				<Label Content="{Binding StatusTotalCount}"/>
-				<Label Content="{Binding StatusMsgArchiving}"/>
-			</DockPanel>			
-			<DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False">
-				<Button DockPanel.Dock="Left" Content="Ny kund" Command="{Binding NewCustomerCommand}"  TabIndex="13" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Left" Content="Ändra kund" Command="{Binding ShowCustomerCommand}"  TabIndex="14" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Left" Content="Nytt objekt" Command="{Binding NewProductCommand}"  TabIndex="15" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Left" Content="Ändra objekt" Command="{Binding ShowProductCommand}"  TabIndex="16" Margin="10,5,10,5" />
-                <Button DockPanel.Dock="Left" Content="Radera objekt" Command="{Binding DeleteProductCommand}"  TabIndex="17" Margin="10,5,10,5" />
-				<Button DockPanel.Dock="Right" Content="Exit" Command="{Binding CancelCommand}"  TabIndex="20" Margin="10,5,10,5" />
-			</DockPanel>
+            </ComboBox>
 
-			<Grid Margin="10">
-				<Grid.InputBindings>
-					<MouseBinding Gesture="LeftDoubleClick" Command="{Binding ShowCustomerCommand}"/>
-					<!--<MouseBinding MouseAction="LeftDoubleClick" Command="{Binding ShowCustomerCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>-->
-				</Grid.InputBindings>
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition />
-					<ColumnDefinition Width="5"/>
-					<ColumnDefinition />
-				</Grid.ColumnDefinitions>
-				
-				<ListView Grid.Column="0" SelectionMode="Extended" ItemsSource="{Binding Customers}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedCustomer}">
-				<ListView.View>
-					<GridView>
-						<GridViewColumn Width="40" DisplayMemberBinding="{Binding Id}">
-							<GridViewColumnHeader Content="Id" Command="{Binding SortCommand}" CommandParameter="FullName" />
-						</GridViewColumn>
-							<GridViewColumn Width="180" DisplayMemberBinding="{Binding Name}" >
-							<GridViewColumnHeader Content="Name" Command="{Binding SortCommand}" CommandParameter="FileName"/>
-						</GridViewColumn>
-							<GridViewColumn Width="100" DisplayMemberBinding="{Binding Phone}" >
-							<GridViewColumnHeader Content="Mobilnr" Command="{Binding SortCommand}" CommandParameter="PatientId" />
-						</GridViewColumn>
-						<GridViewColumn Width="100" DisplayMemberBinding="{Binding Note}" >
-							<GridViewColumnHeader Content="Not" Command="{Binding SortCommand}" CommandParameter="BirthDate" />
-						</GridViewColumn>
-					</GridView>
-				</ListView.View>
-			</ListView>
-				<GridSplitter Grid.Column="1" ResizeDirection="Columns" 
+        </DockPanel>
+        <DockPanel>
+            <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False"  Background="#FBD800">
+                <Label Content="{Binding StatusAuctionCount}"/>
+                <Label Content="{Binding StatusJumbleCount}"/>
+                <Label Content="{Binding StatusMsgArchiving}"/>
+            </DockPanel>
+
+            <Grid Margin="10">
+                <Grid.InputBindings>
+                    <MouseBinding Gesture="LeftDoubleClick" Command="{Binding ShowCustomerCommand}"/>
+                    <!--<MouseBinding MouseAction="LeftDoubleClick" Command="{Binding ShowCustomerCommand, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>-->
+                </Grid.InputBindings>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition Width="5"/>
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <DockPanel Grid.Column="0">
+                    <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False">
+                        <Button DockPanel.Dock="Left" Content="Ny kund" Command="{Binding NewCustomerCommand}"  TabIndex="13" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Left" Content="Ändra kund" Command="{Binding ShowCustomerCommand}"  TabIndex="14" Margin="10,5,10,5" />
+                    </DockPanel>
+                    <ListView  SelectionMode="Extended" ItemsSource="{Binding Customers}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Width="40" DisplayMemberBinding="{Binding Id}">
+                                <GridViewColumnHeader Content="Id" Command="{Binding SortCustomerCommand}" CommandParameter="FullName" />
+                            </GridViewColumn>
+                            <GridViewColumn Width="180" DisplayMemberBinding="{Binding Name}" >
+                                <GridViewColumnHeader Content="Name" Command="{Binding SortCustomerCommand}" CommandParameter="FileName"/>
+                            </GridViewColumn>
+                            <GridViewColumn Width="100" DisplayMemberBinding="{Binding Phone}" >
+                                <GridViewColumnHeader Content="Mobilnr" Command="{Binding SortCustomerCommand}" CommandParameter="PatientId" />
+                            </GridViewColumn>
+                            <GridViewColumn Width="100" DisplayMemberBinding="{Binding Note}" >
+                                <GridViewColumnHeader Content="Not" Command="{Binding SortCustomerCommand}" CommandParameter="BirthDate" />
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+                </DockPanel>
+                <GridSplitter Grid.Column="1" ResizeDirection="Columns" 
                ResizeBehavior="PreviousAndNext"
               HorizontalAlignment="Stretch" />
-				<ListView Grid.Column="2"  SelectionMode="Extended" ItemsSource="{Binding Products}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedProduct}">
-					<ListView.View>
-						<GridView>
-							<GridViewColumn Width="40" DisplayMemberBinding="{Binding Id}">
-								<GridViewColumnHeader Content="Id" Command="{Binding SortCommand}" CommandParameter="FullName" />
-							</GridViewColumn>
-							<GridViewColumn Width="180" DisplayMemberBinding="{Binding Name}">
-								<GridViewColumnHeader Content="Name" Command="{Binding SortCommand}" CommandParameter="FileName"/>
-							</GridViewColumn>
-							<GridViewColumn Width="100" DisplayMemberBinding="{Binding Type}" >
-								<GridViewColumnHeader Content="Typ" Command="{Binding SortCommand}" CommandParameter="Status" />
-							</GridViewColumn>
-							<GridViewColumn Width="100" DisplayMemberBinding="{Binding FixedPrice}" >
-								<GridViewColumnHeader Content="LoppisPris" Command="{Binding SortCommand}" CommandParameter="PatientId" />
-							</GridViewColumn>
-							<GridViewColumn Width="100" DisplayMemberBinding="{Binding Note}" >
-								<GridViewColumnHeader Content="Not" Command="{Binding SortCommand}" CommandParameter="BirthDate" />
-							</GridViewColumn>
-						</GridView>
-					</ListView.View>
-				</ListView>
+                <DockPanel Grid.Column="2">
+                    <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False">
+                        <Button DockPanel.Dock="Left" Content="Nytt objekt" Command="{Binding NewProductCommand}"  TabIndex="15" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Left" Content="Ändra objekt" Command="{Binding ShowProductCommand}"  TabIndex="16" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Left" Content="Radera objekt" Command="{Binding DeleteProductCommand}"  TabIndex="17" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Right" Content="Exit" Command="{Binding CancelCommand}"  TabIndex="20" Margin="10,5,10,5" />
+                    </DockPanel>
+                    <ListView SelectionMode="Extended" ItemsSource="{Binding Products}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedProduct}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Width="40" DisplayMemberBinding="{Binding Id}">
+                                <GridViewColumnHeader Content="Id" Command="{Binding SortCommand}" CommandParameter="FullName" />
+                            </GridViewColumn>
+                            <GridViewColumn Width="180" DisplayMemberBinding="{Binding Name}">
+                                <GridViewColumnHeader Content="Name" Command="{Binding SortCommand}" CommandParameter="FileName"/>
+                            </GridViewColumn>
+                            <GridViewColumn Width="100" DisplayMemberBinding="{Binding Type}" >
+                                <GridViewColumnHeader Content="Typ" Command="{Binding SortCommand}" CommandParameter="Status" />
+                            </GridViewColumn>
+                            <GridViewColumn Width="100" DisplayMemberBinding="{Binding FixedPrice}" >
+                                <GridViewColumnHeader Content="LoppisPris" Command="{Binding SortCommand}" CommandParameter="PatientId" />
+                            </GridViewColumn>
+                            <GridViewColumn Width="100" DisplayMemberBinding="{Binding Note}" >
+                                <GridViewColumnHeader Content="Not" Command="{Binding SortCommand}" CommandParameter="BirthDate" />
+                            </GridViewColumn>
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+                </DockPanel>
+            </Grid>
+        </DockPanel>
 
-			</Grid>
-		</DockPanel>
-
-	</DockPanel>
+    </DockPanel>
 </Window>
