--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -44,6 +44,7 @@
                     <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False">
                         <Button DockPanel.Dock="Left" Content="Ny kund" Command="{Binding NewCustomerCommand}"  TabIndex="13" Margin="10,5,10,5" />
                         <Button DockPanel.Dock="Left" Content="Ändra kund" Command="{Binding ShowCustomerCommand}"  TabIndex="14" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Left" Content="Uppdatera" Command="{Binding UpdateCommand}"  TabIndex="15" Margin="10,5,10,5" />
                     </DockPanel>
                     <ListView  SelectionMode="Extended" ItemsSource="{Binding Customers}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedCustomer, Mode=TwoWay}">
                     <ListView.View>
@@ -77,7 +78,7 @@
                     <ListView SelectionMode="Extended" ItemsSource="{Binding Products}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedProduct}">
                     <ListView.View>
                         <GridView>
-                            <GridViewColumn Width="40" DisplayMemberBinding="{Binding Id}">
+                            <GridViewColumn Width="40" DisplayMemberBinding="{Binding Label}">
                                 <GridViewColumnHeader Content="Id" Command="{Binding SortCommand}" CommandParameter="FullName" />
                             </GridViewColumn>
                             <GridViewColumn Width="180" DisplayMemberBinding="{Binding Name}">
