--- a/ConAuction3/Views/MainWindow.xaml
+++ b/ConAuction3/Views/MainWindow.xaml
@@ -1,7 +1,9 @@
 ﻿<Window x:Class="ConAuction3.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:converters="clr-namespace:ConAuction3.Converters"
         Title="ConAuction" Height="900" Width="1400">
+
 
     <Window.Resources>
         <ResourceDictionary>
@@ -9,8 +11,14 @@
                 <ResourceDictionary Source="/PresentationFramework.Luna;component/themes/Luna.Metallic.xaml"/>
                 <ResourceDictionary Source="../Resources/ResourceDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:BoolToVisibilityConverter x:Key="BooleanToInverseVisibilityConverter" TrueValue="Collapsed"
+                                                  FalseValue="Visible" />
+            <converters:BoolToVisibilityConverter x:Key="BooleanToVisibilityConverter" TrueValue="Visible"
+                                                  FalseValue="Collapsed" />
         </ResourceDictionary>
     </Window.Resources>
+
+
     <Window.InputBindings>
         <KeyBinding Key="F1" Command="{Binding NewCustomerCommand}" />
         <KeyBinding Key="F2" Command="{Binding ShowCustomerCommand}" />
@@ -44,8 +52,10 @@
 
                 <DockPanel Grid.Column="0">
                     <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False">
-                        <Button DockPanel.Dock="Left" Content="Ny kund" Command="{Binding NewCustomerCommand}"  TabIndex="10" Margin="10,5,10,5" />
-                        <Button DockPanel.Dock="Left" Content="Ändra kund" Command="{Binding ShowCustomerCommand}"  TabIndex="11" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Left" Content="Ny kund" Command="{Binding NewCustomerCommand}"  TabIndex="10" Margin="10,5,10,5"
+                                Visibility="{Binding EditingButtonsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                        <Button DockPanel.Dock="Left" Content="Ändra kund" Command="{Binding ShowCustomerCommand}"  TabIndex="11" Margin="10,5,10,5"
+                                Visibility="{Binding EditingButtonsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"/>
                         <Button DockPanel.Dock="Left" Content="Uppdatera" Command="{Binding UpdateCommand}"  TabIndex="12" Margin="10,5,10,5" />
                     </DockPanel>
                     <ListView Name="ListViewCustomers" SelectionMode="Extended" ItemsSource="{Binding Customers}" IsSynchronizedWithCurrentItem="True" 
@@ -74,9 +84,16 @@
               HorizontalAlignment="Stretch" />
                 <DockPanel Grid.Column="2">
                     <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" LastChildFill="False">
-                        <Button DockPanel.Dock="Left" Content="Nytt objekt" Command="{Binding NewProductCommand}"  TabIndex="15" Margin="10,5,10,5" />
-                        <Button DockPanel.Dock="Left" Content="Ändra objekt" Command="{Binding ShowProductCommand}"  TabIndex="16" Margin="10,5,10,5" />
-                        <Button DockPanel.Dock="Left" Content="Radera objekt" Command="{Binding DeleteProductCommand}"  TabIndex="17" Margin="10,5,10,5" />
+                        <Button DockPanel.Dock="Left" Content="Nytt objekt" Command="{Binding NewProductCommand}"  TabIndex="15" Margin="10,5,10,5"
+                                Visibility="{Binding EditingButtonsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <Button DockPanel.Dock="Left" Content="Ändra objekt" Command="{Binding ShowProductCommand}"  TabIndex="16" Margin="10,5,10,5"
+                                Visibility="{Binding EditingButtonsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <Button DockPanel.Dock="Left" Content="Radera objekt" Command="{Binding DeleteProductCommand}"  TabIndex="17" Margin="10,5,10,5" 
+                                Visibility="{Binding EditingButtonsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
+                        <CheckBox DockPanel.Dock="Left" TabIndex="18" IsTabStop="True" VerticalAlignment="Center" Margin="10,5,10,5" 
+                                  Visibility="{Binding FilterCheckVisible, Converter={StaticResource BooleanToVisibilityConverter}}">Loppis</CheckBox>
+                        <CheckBox DockPanel.Dock="Left" TabIndex="18" IsTabStop="True" VerticalAlignment="Center" Margin="10,5,10,5"
+                                  Visibility="{Binding FilterCheckVisible, Converter={StaticResource BooleanToVisibilityConverter}}">Osålt</CheckBox>
                         <Button DockPanel.Dock="Right" Content="Exit" Command="{Binding CancelCommand}"  TabIndex="20" Margin="10,5,10,5" />
                     </DockPanel>
                     <ListView Name="ListViewProducts" SelectionMode="Extended" ItemsSource="{Binding Products}" IsSynchronizedWithCurrentItem="True" SelectedItem="{Binding SelectedProduct}"
